--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -50,12 +50,12 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Minimize job run time](./minimize-time)
 * [Maximum execution time](./max-execution-time)
 
-### Systems and platform information
+### QPU and platform information
 * [Processor types](./processor-types)
-* [System information](./system-information)
-* [Get backend information with Qiskit](./get-backend-information)
+* [QPU information](./qpu-information)
+* [Get QPU information with Qiskit](./get-qpu-information)
 * [Native gates and operations](./native-gates)
-* [Retired systems](./retired-systems)
+* [Retired QPUs](./retired-qpus)
 * [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations)
 * [Instances](./instances)
 * [Fair-share scheduler](./fair-share-scheduler)
