--- a/docs/guides/processor-types.mdx
+++ b/docs/guides/processor-types.mdx
@@ -23,6 +23,13 @@ At 133 qubits, Heron is an [Eagle](#eagle)-sized upgrade to [Egret](#egret) that
 
 * [Native gates and operations](native-gates): `cz, id, delay, measure, reset, rz, sx, x, if_else, for_loop, switch_case`
 
+<Admonition type="info" title="Revisions">
+  `r2` (July 2024) 
+
+  This is a revision of our original Heron processor. The chip has been redesigned to now include 156 qubits in a heavy-hexagonal lattice. While continuing to make use of the innovations of the original Heron systems, it also introduces a new TLS mitigation feature that controls the TLS environment of the chip, thereby improving coherence and stability across the whole chip.
+
+</Admonition>
+
 ## Osprey
 
 ![Osprey processor icon](/images/guides/processor-types/osprey.svg)
