--- a/docs/guides/processor-types.mdx
+++ b/docs/guides/processor-types.mdx
@@ -26,7 +26,7 @@ At 133 qubits, Heron is an [Eagle](#eagle)-sized upgrade to [Egret](#egret) that
 <Admonition type="info" title="Revisions">
   `r2` (July 2024) 
 
-  This is a revision of our original Heron processor. The chip has been redesigned to now include 156 qubits in a heavy-hexagonal lattice. While continuing to make use of the innovations of the original Heron systems, it also introduces a new TLS mitigation feature that controls the TLS environment of the chip, thereby improving coherence and stability across the whole chip.
+  This is a revision of the original Heron processor. The chip has been redesigned to include 156 qubits in a heavy-hexagonal lattice. While continuing to make use of the innovations of the original Heron systems, it also introduces a new TLS mitigation feature that controls the TLS environment of the chip, thereby improving coherence and stability across the whole chip.
 
 </Admonition>
 
