--- a/docs/guides/processor-types.mdx
+++ b/docs/guides/processor-types.mdx
@@ -28,6 +28,10 @@ At 156 qubits, Heron is an [Eagle](#eagle)-sized upgrade to [Egret](#egret) that
 
   This is a revision of the original Heron processor. The chip has been redesigned to include 156 qubits in a heavy-hexagonal lattice. While continuing to make use of the innovations of the original Heron systems, it also introduces a new TLS mitigation feature that controls the TLS environment of the chip, thereby improving coherence and stability across the whole chip.
 
+  `r1` (December 2023)
+
+  The first version of Heron with 133 qubits and no TLS mitigation control.
+
 </Admonition>
 
 ## Osprey
