--- a/docs/guides/processor-types.mdx
+++ b/docs/guides/processor-types.mdx
@@ -30,7 +30,7 @@ At 156 qubits, Heron is an [Eagle](#eagle)-sized upgrade to [Egret](#egret) that
 
   `r1` (December 2023)
 
-  The first version of Heron with 133 qubits and no TLS mitigation control.
+  The first version of Heron with 133 qubits.
 
 </Admonition>
 
